--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="./images/favicon.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
-    <title>Clicky Game</title>
+    <title>Click it, Suckah.</title>
   </head>
   <body>
     <noscript>
